<resources>
    <string name="app_name">bookSharing!</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="direction">Direction</string>
    <string name="nickname">Nickname</string>
    <string name="nicknameHint">Insert your nickname here</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="cap">CAP</string>
    <string name="directionHint">Insert your direction here</string>
    <string name="cityHint">Insert your city here</string>
    <string name="provinceHint">Insert your province here</string>
    <string name="capHint">Insert your CAP here</string>
    <string name="nameHint">Insert your name here</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="emailHint">Insert your email here</string>
    <string name="bio">Biography</string>
    <string name="bioHint">Write a short biography</string>
    <string name="grantedPermission">Permissions granted</string>
    <string name="deniedPermission">Permissions denied</string>
    <string name="profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="share_books">Share book</string>
    <string name="search_books">Search book</string>
    <string name="register">Register</string>
    <string name="sign">Sign In</string>
    <string name="publish">  Share Book</string>
    <string name="noThumbnail">No thumbnail was found</string>
    <string name="noData">Couldn\'t get some data</string>
    <string name="insertIsbn">(Insert ISBN code)</string>
    <string name="dialogTitle">Choose your book Condition</string>
    <string name="cancel">Cancel</string>
    <string name="asNew">As New</string>
    <string name="veryGood">Very Good</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="bookNotValid">Book is not valid!</string>
    <string name="pressToScan">Scan ISBN  </string>
    <string name="SearchIsbn">Search ISBN  </string>
    <string name="usageDescription">To get information about the book you want to share, enter the ISBN code in the space provided or scan the barcode on the back of the book</string>
    <string name="notSignedIn">If you want to share a book Sign In first!</string>
    <string name="title_activity_search_book">SearchBookActivity</string>
    <string name="search_hint">Search for...</string>
    <string name="search_button">Search</string>
    <string name="user_books">My books</string>
    <string name="thumbnail_description_SingleShowBookActivity">Thumbnail of the book that is shown</string>
    <string name="message_button">Write a message</string>
    <string name="message_button_description">Send a message to the owner of the book</string>
    <string name="chats">Chat</string>
    <string name="cantSend">You\'re sharing this book!!</string>
    <string name="bookUploadOk">Book successfully shared!!</string>
    <string name="conditions">Conditions: </string>
    <string name="contact">Contact user</string>ù
    <string name="getReview">Read reviews</string>
    <string name="writeReview">Write a review</string>
    <string name="borrow">Borrow a book</string>
    <string name="userProfile">User Profile</string>
    <string name="userBorrow">You\'re borrowing a book from: </string>
    <string name="startingDate">Starting Date</string>
    <string name="endingDate">Ending Date</string>
    <string name="selectBook">Select a book</string>
    <string name="selectBookClick">Tap here to select a book</string>
    <string name="tapToSelect">Tap here to select</string>
    <string name="selectedBook">Wanted Book</string>
    <string name="sendRequest">Send Request</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="accept">Accept Request</string>
    <string name="deny">Deny Request</string>
    <string name="wantsToBorrow">wants to borrow</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="requestSent">You successfully sent the request! </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reminderAccept">Are you sure you want to accept this request?</string>
    <string name="reminderDecline">Are you sure you want to decline this request?</string>
    <string name="alreadySent">You\'ve already sent a request for this book…\n\n Do you want to override it?</string>
    <string name="nothingToDisplay">There\'s nothing to display</string>
    <string name="wait">Please wait</string>
    <string name="transactions">Ongoing/finished exchanges</string>
    <string name="book">Book</string>
    <string name="contactUser">Contact</string>
    <string name="period">Period</string>
    <string name="finishedExchange">Transaction finished</string>
    <string name="notStartedExchange">Transaction not started</string>
    <string name="ongoingExchange">Ongoing transaction</string>
    <string name="requestNotComplete">Request is not complete</string>
    <string name="rateNow">You can now rate the user! TAP HERE</string>
    <string name="rate">Rate User</string>
    <string name="rateTitleDescription">Title or summary of your review (required)</string>
    <string name="rateCommentHint">Write your review here (required)</string>
    <string name="sendReview">Send review?</string>
    <string name="reviewNotComplete">Review is not complete!</string>
    <string name="showbooks">My Books</string>
    <string name="profileDescription">You real name and you email won\'t be displayed till you accept an exchange request</string>
    <string name="chatList">Chat List</string>
    <string name="reviews">Reviews</string>
    <string name="deleteBook">Delete Book</string>
    <string name="confirmDelete">Are you sure you want to delete this book?\n</string>
    <string name="zzz">You\'re asking for a book to: </string>
    <string name="loaned">LOANED</string>
    <string name="lent">LENT</string>
</resources>
