<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
       <!-- <item
            android:id="@+id/nav_user_books"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/user_books" />   -->
        <item
            android:id="@+id/nav_share_books_logged"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/share_books" />
        <item
            android:id="@+id/nav_search_books"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/search_books" />
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/logout"
            android:title="@string/logout"
            />
    </group>
</menu>